--- a/index.html
+++ b/index.html
@@ -3,142 +3,181 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haodong - 洞察型开发者 & 创意策略师</title>
+    <title>Haodong - Personal Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <!-- 建议后期可以添加一个网站图标 Favicon -->
-    <!-- <link rel="icon" href="images/favicon.ico"> -->
 </head>
 <body>
-
-    <!-- Header & Hero Section -->
-    <header id="home">
-        <nav class="navbar">
-            <div class="container">
-                <a href="#home" class="logo">Haodong</a>
-                <ul class="nav-menu">
-                    <li><a href="#services">服务</a></li>
-                    <li><a href="#portfolio">作品集</a></li>
-                    <li><a href="#about">关于我</a></li>
-                    <li><a href="#contact">联系我</a></li>
-                </ul>
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+    <!-- Navigation -->
+    <nav class="nav">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <a href="#home">Haodong</a>
             </div>
-        </nav>
-
-        <div class="hero">
-            <div class="hero-overlay"></div>
-            <div class="hero-content container">
-                <img src="images/avatar.png" alt="Haodong's Avatar" class="avatar">
-                <h1>Haodong</h1>
-                <p class="subtitle">洞察型开发者 & 创意策略师</p>
-                <div class="social-links">
-                    <a href="https://www.xiaohongshu.com/user/profile/63ea459b000000002601377b" target="_blank" title="小红书">XHS</a>
-                    <!-- 可以添加更多社交链接 -->
-                </div>
-                <a href="#contact" class="btn btn-primary">联系我</a>
+            <div class="nav-toggle" id="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
-    </header>
+    </nav>
 
-    <main>
-        <!-- Services Section -->
-        <section id="services" class="section">
-            <div class="container">
-                <h2 class="section-title">我能做什么</h2>
-                <div class="services-grid">
-                    <div class="service-card">
-                        <div class="service-icon">
-                            <!-- Placeholder for icon -->
-                        </div>
-                        <h3>Web Development</h3>
-                        <p>使用最新技术栈，为您构建高性能、响应式的网站和Web应用。</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">
-                            <!-- Placeholder for icon -->
-                        </div>
-                        <h3>UI/UX Design</h3>
-                        <p>专注于用户体验，设计出既美观又易于使用的界面，提升产品价值。</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">
-                            <!-- Placeholder for icon -->
-                        </div>
-                        <h3>Digital Strategy</h3>
-                        <p>分析您的业务需求，提供一站式的数字化解决方案，助力业务增长。</p>
-                    </div>
+    <!-- Full Screen Menu Overlay -->
+    <div class="menu-overlay" id="menu-overlay">
+        <div class="menu-content">
+            <div class="menu-close" id="menu-close">
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="menu-links">
+                <li><a href="#home" class="menu-link">首页</a></li>
+                <li><a href="#about" class="menu-link">关于我</a></li>
+                <li><a href="#work" class="menu-link">作品</a></li>
+                <li><a href="#contact" class="menu-link">联系</a></li>
+            </ul>
+            <div class="menu-footer">
+                <div class="menu-contact">
+                    <p>haodong2039@gmail.com</p>
+                    <p>13019402039</p>
+                </div>
+                <div class="menu-social">
+                    <a href="https://www.xiaohongshu.com/user/profile/63ea459b000000002601377b" target="_blank">小红书</a>
                 </div>
             </div>
-        </section>
+        </div>
+    </div>
 
-        <!-- Portfolio Section -->
-        <section id="portfolio" class="section">
-            <div class="container">
-                <h2 class="section-title">我的作品集</h2>
-                <div class="portfolio-grid">
-                    <div class="portfolio-item"><img src="images/portfolio-1.jpg" alt="Portfolio Project 1"></div>
-                    <div class="portfolio-item"><img src="images/portfolio-2.jpg" alt="Portfolio Project 2"></div>
-                    <div class="portfolio-item"><img src="images/portfolio-3.jpg" alt="Portfolio Project 3"></div>
-                    <div class="portfolio-item"><img src="images/portfolio-4.jpg" alt="Portfolio Project 4"></div>
-                    <div class="portfolio-item"><img src="images/portfolio-5.jpg" alt="Portfolio Project 5"></div>
-                    <div class="portfolio-item"><img src="images/portfolio-6.jpg" alt="Portfolio Project 6"></div>
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1 class="hero-title">Haodong</h1>
+                <p class="hero-subtitle">[Your Title or Tagline Here]</p>
+                <div class="hero-scroll-indicator">
+                    <span>向下滚动</span>
+                    <div class="scroll-arrow"></div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- About Me Section -->
-        <section id="about" class="section">
-            <div class="container about-container">
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <div class="about-content">
                 <div class="about-text">
                     <h2 class="section-title">关于我</h2>
-                    <p>作为一个典型的INFJ，我热衷于探索深度、创造有意义的联结。代码是我的画布，创造力是我的颜料，我致力于将深刻的洞察力融入每一个项目中，打造出不仅功能强大，更能触动人心的数字产品。</p>
-                </div>
-                <div class="about-contact">
-                    <h3>联系方式</h3>
-                    <p><strong>电话:</strong> 13019402039</p>
-                    <p><strong>邮箱:</strong> haodong2039@gmail.com</p>
-                    <a href="#" class="btn btn-secondary">下载简历</a>
+                    <p class="about-description">我是一个典型的INFJ。曾经做过硬件工程师，底盘调校工程师，业余投资者。</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- Testimonial Section -->
-        <section id="testimonial" class="section">
-            <div class="container text-center">
-                <blockquote>
-                    <p>"Haodong是一位非常有才华的开发者，他对细节的关注和对产品的深刻理解，让我们的合作项目取得了超预期的成功。"</p>
-                    <cite>- 李明, 项目经理</cite>
-                </blockquote>
+    <!-- Horizontal Scroll Work Section -->
+    <section id="work" class="work-section">
+        <div class="work-sticky-container">
+            <div class="work-header">
+                <h2 class="section-title">精选作品</h2>
             </div>
-        </section>
+            <div class="work-scroll-container" id="work-scroll-container">
+                <div class="work-items">
+                    <!-- Project 1 -->
+                    <div class="work-item">
+                        <div class="work-image">
+                            <img src="https://images.unsplash.com/photo-1518709268805-4e9042af2176?w=800&h=600&fit=crop" alt="Project 01">
+                        </div>
+                        <div class="work-content">
+                            <h3 class="work-title">Project Title 01</h3>
+                            <p class="work-category">硬件工程</p>
+                            <p class="work-description">[Project description goes here.]</p>
+                        </div>
+                    </div>
 
-        <!-- Contact CTA Section -->
-        <section id="contact" class="section cta-section">
-            <div class="container text-center">
-                <h2>有一个项目想法？</h2>
-                <p>让我们聊聊，看看我能如何帮助您将想法变为现实。</p>
-                <a href="mailto:haodong2039@gmail.com" class="btn btn-primary">开始吧</a>
+                    <!-- Project 2 -->
+                    <div class="work-item">
+                        <div class="work-image">
+                            <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?w=800&h=600&fit=crop" alt="Project 02">
+                        </div>
+                        <div class="work-content">
+                            <h3 class="work-title">Project Title 02</h3>
+                            <p class="work-category">底盘调校</p>
+                            <p class="work-description">[Project description goes here.]</p>
+                        </div>
+                    </div>
+
+                    <!-- Project 3 -->
+                    <div class="work-item">
+                        <div class="work-image">
+                            <img src="https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?w=800&h=600&fit=crop" alt="Project 03">
+                        </div>
+                        <div class="work-content">
+                            <h3 class="work-title">Project Title 03</h3>
+                            <p class="work-category">投资分析</p>
+                            <p class="work-description">[Project description goes here.]</p>
+                        </div>
+                    </div>
+
+                    <!-- Project 4 -->
+                    <div class="work-item">
+                        <div class="work-image">
+                            <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?w=800&h=600&fit=crop" alt="Project 04">
+                        </div>
+                        <div class="work-content">
+                            <h3 class="work-title">Project Title 04</h3>
+                            <p class="work-category">技术创新</p>
+                            <p class="work-description">[Project description goes here.]</p>
+                        </div>
+                    </div>
+
+                    <!-- Project 5 -->
+                    <div class="work-item">
+                        <div class="work-image">
+                            <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800&h=600&fit=crop" alt="Project 05">
+                        </div>
+                        <div class="work-content">
+                            <h3 class="work-title">Project Title 05</h3>
+                            <p class="work-category">数据分析</p>
+                            <p class="work-description">[Project description goes here.]</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="contact-content">
+                <h2 class="section-title">联系我</h2>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <h3>邮箱</h3>
+                        <a href="mailto:haodong2039@gmail.com">haodong2039@gmail.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <h3>电话</h3>
+                        <a href="tel:13019402039">13019402039</a>
+                    </div>
+                    <div class="contact-item">
+                        <h3>社交媒体</h3>
+                        <a href="https://www.xiaohongshu.com/user/profile/63ea459b000000002601377b" target="_blank">小红书</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-content">
-                <p>&copy; 2025 Haodong. All Rights Reserved.</p>
-                <div class="social-links">
-                    <a href="https://www.xiaohongshu.com/user/profile/63ea459b000000002601377b" target="_blank" title="小红书">XHS</a>
-                     <!-- 可以添加更多社交链接 -->
-                </div>
-            </div>
+            <p>&copy; 2024 Haodong. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="js/main.js"></script>
 </body>
 </html>
+
